# WASI-Windowing

./: README.md
example-apps/example1/: Cargo.toml
example-apps/example1/src/: bindings.rs  main.rs
example-apps/example1/wit/: world.wit
example-runtime/: Cargo.toml
example-runtime/src/: main.rs
wit/: event.wit  example.wit  gui-app.wit  window.wit  world.wit
