[package]
name = "example-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { version = "17.0.1", features = ["component-model"]}
wasmtime-wasi = "17.0.1"
winit = "0.29.10"
tokio = { version = "1.36.0", features = ["full"]}


